--- a/personal/styles.css
+++ b/personal/styles.css
@@ -3,9 +3,7 @@
 /* Style rules for body and images */
 body {
   background-color: #bdb8b8;
-  /* color: white; */
-  /* np p119 */
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  width: 100%;
 }
 
 /* Style rule for header */
@@ -30,18 +28,10 @@ nav ul {
 
 nav li {
   display: inline-block;
-  font-size: 1.2em;
-  font-family: Verdana, Arial, sans-serif;
-  font-weight: bold;
-  letter-spacing: 0.1em;
 }
 
 nav li a {
   display: block;
-  color: black;
-  text-align: center;
-  padding: 1em 1.5em;
-  text-decoration: none;
 }
 
 /* Styles for main, section, and footer areas */
@@ -52,30 +42,6 @@ footer {
   /* Later check changing this to left */
   clear: left;
   padding: 2%;
-  font-size: 1.2em;
-}
-
-/* Styles for the div area */
-/* div {
-  clear: right;
-} */
-
-/* Styles for footer content */
-footer p {
-  font-size: 1em;
-  padding: 0 1em;
-  font: normal Quicksand, Verdana, Geneva;
-  text-align: center;
-}
-
-footer p a {
-  text-decoration: none;
-  color: black;
-}
-
-/* Elements styles */
-h1 {
-  font-size: 1.5em;
 }
 
 /* Styles for the main and div section */
@@ -86,33 +52,45 @@ div#parent {
 
 main#intro {
   width: 50%;
-  margin: 100px 0;
-  padding: 100px 0;
+  margin: 100px auto;
+  padding: 100px auto;
 }
 
 div#image {
   width: 50%;
-  margin: 100px 0;
-  padding: 100px 0;
+  margin: 100px auto;
+  padding: 100px auto;
 }
 
 /* Styles for the stacks section */
-section#stacks {
+/* section#stacks {
   width: 100%;
-  margin: 100px 0;
-  padding: 100px 0;
+  margin: 100px auto;
+  padding: 100px auto;
+} */
+
+/* Positioning the list elements horizontally for the stack section */
+/* Needs more work in the next sessions */
+/* Reduce the padding and margin */
+/* When the viewport gets smaller the li items start moving to the next line */
+/* Check html197 */
+section#stackSection > ul > li {
+  display: block;
+  float: left;
+  padding: 100px 60px;
+  margin: 100px auto;
 }
 
 /* Styles for the projects section */
 section#projects {
   width: 100%;
-  margin: 100px 0;
-  padding: 100px 0;
+  margin: 100px auto;
+  padding: 100px auto;
 }
 
 /* Styles for the contact section */
 section#contact {
   width: 100%;
-  margin: 100px 0;
-  padding: 100px 0;
+  margin: 100px auto;
+  padding: 100px auto;
 }
